--- a/.gitignore
+++ b/.gitignore
@@ -38,7 +38,7 @@ captures/
 .idea/tasks.xml
 .idea/gradle.xml
 .idea/dictionaries
-.idea/libraries
+# .idea/libraries
 
 # Keystore files
 *.jks
@@ -53,3 +53,13 @@ google-services.json
 freeline.py
 freeline/
 freeline_project_description.json
+# app/libs/
+app/proguard-rules.pro
+# app/src/main/res/drawable/
+build.gradle
+gradle.properties
+gradle/
+gradlew
+gradlew.bat
+settings.gradle
+.gitignore
