Support view and edit each node in Markdown text.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,4 +47,5 @@ dependencies {
     compile 'com.facebook.fresco:animated-gif:0.13.0'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
+    compile 'us.feras.mdv:markdownview:1.1.0'
 }
