--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,7 +20,10 @@
         </activity>
         <activity android:name=".Github.Auth.AuthActivity" />
         <activity android:name=".MainActivity" />
-
+        <activity android:name=".NoteShowActivity"
+            android:parentActivityName=".MainActivity"/>
+        <activity android:name=".NoteEditActivity"
+            android:parentActivityName=".NoteShowActivity"/>
     </application>
 
 </manifest>
