On the process of writing viewpager of repository show page

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,6 +24,8 @@
             android:parentActivityName=".MainActivity"/>
         <activity android:name=".NoteEditActivity"
             android:parentActivityName=".NoteShowActivity"/>
+        <activity android:name=".RepoListShowActivity"
+            android:parentActivityName=".MainActivity"/>
     </application>
 
 </manifest>
