--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,6 +26,10 @@
             android:parentActivityName=".NoteShowActivity"/>
         <activity android:name=".RepoListShowActivity"
             android:parentActivityName=".MainActivity"/>
+        <activity android:name=".RepoShowActivity"
+            android:parentActivityName=".RepoListShowActivity"/>
+        <activity android:name=".MileStoneNoteListActivity"
+            android:parentActivityName=".RepoShowActivity"/>
     </application>
 
 </manifest>
