Can make comment in a note now.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,6 +34,7 @@
         <activity android:name=".AddNoteActivity"/>
         <activity android:name=".AddMileStoneActivity"/>
         <activity android:name=".AddRepoActivity"/>
+        <activity android:name=".AddCommentActivity"/>
     </application>
 
 </manifest>
